# ascenoria

./: .gitignore  AGENTS.md  CHANGELOG.md  CHANGE_NOTES.md  Cargo.toml  MVP.md  PROJECT_STATUS.md  README.md
.github/: copilot-instructions.md
assets/: README.md
assets/data/: README.md  planet_sizes.toml  planet_surfaces.toml  planet_types.toml  planetary_buildings.toml  planetary_orbital.toml  planetary_projects.toml  planetary_satellites.toml  planetary_surface.toml  research.toml  research_prereqs.toml  scenarios.ron  scenarios.toml  ship_hulls.toml  ships_engines.toml  ships_scanners.toml  ships_shields.toml  ships_special.toml  ships_weapons.toml  species.toml  surface_buildings.ron  surface_buildings.toml  surface_cell_types.ron  surface_cell_types.toml  technologies.ron  technologies.toml  victory_conditions.ron  victory_conditions.toml  victory_rules.toml
docs/: Ascenoria_MVP_Scope.md  screens_hierarchy.md
features/automated/: connectivity.feature  data_loading.feature  planet_generation.feature
features/manual/: hot_reload.feature  main_menu.feature  planet_view_ui.feature
scripts/: update_project_status.py
src/: combat.rs  data.rs  galaxy.rs  galaxy_data.rs  galaxy_map.rs  game_data_plugin.rs  game_options.rs  game_summary.rs  industry.rs  lib.rs  main.rs  main_menu.rs  planet.rs  planet_view.rs  preview.rs  research.rs  shared.rs  ship_blueprints.rs  ship_design.rs  ship_ui.rs  ship_ui_tests.rs  species_intro.rs  species_selection.rs  star_system.rs  victory.rs
src/combat/: mod.rs  simulation.rs  tests.rs  types.rs
src/data/: compute.rs  entities.rs  game_data.rs  loaders.rs  localization.rs  mod.rs  registry.rs  tests.rs  validation.rs
src/data_types/: errors.rs  ids.rs  localization.rs  mod.rs
src/galaxy_map/: generation.rs  mod.rs  modal.rs  setup.rs  systems.rs  types.rs  ui.rs
tests/: cucumber.rs
(+253 files in other folders)
