[package]
name = "ascenoria"
version = "0.1.0"
edition = "2024"

[lib]
name = "ascenoria"
path = "src/lib.rs"

[[bin]]
name = "ascenoria"
path = "src/main.rs"

[[test]]
name = "cucumber"
path = "tests/cucumber.rs"
harness = false

[dependencies]
# Dynamic linking speeds up incremental Bevy builds during dev.
bevy = { version = "0.18.0", features = ["file_watcher"] }
bevy_asset = { version = "0.18.0" }
bevy_mesh = { version = "0.18.0" }
thiserror = "1"
ron = "0.12"
serde = { version = "1", features = ["derive"] }
rand = "0.8"

[dev-dependencies]
cucumber = "0.21"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[profile.dev]
debug = true
opt-level = 0
incremental = true

[profile.dev.package."*"]
opt-level = 0

# # Enable a small amount of optimization in the dev profile.
# [profile.dev]
# opt-level = 1

# # Enable a large amount of optimization in the dev profile for dependencies.
# [profile.dev.package."*"]
# opt-level = 3

# Enable more optimization in the release profile at the cost of compile time.
[profile.release]
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = "thin"

# Optimize for size in the wasm-release profile to reduce load times and bandwidth usage on web.
[profile.wasm-release]
# Default to release profile values.
inherits = "release"
# Optimize with size in mind (also try "z", sometimes it is better).
# Slightly slows compile times, great improvements to file size and runtime performance.
opt-level = "s"
# Strip all debugging information from the binary to slightly reduce file size.
strip = "debuginfo"
